fix unit tests on windows